# git-kanban

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MULTI_REPO_REVIEW.md  README.md  README.zh.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: config.rs  main.rs  sync.rs  types.rs  ui.rs
tests/: cli_test.rs
